Fix #12136. Update tomcat. Fixed cargo startup issues with Java 17